# kmu-agent-course

./: README.md  hello.py  pyproject.toml
AI_Agent/: 001. agent.md  kmu.db  main.py
AI_Agent/agent/graph/: graph_build.py
AI_Agent/batch/: fiel_loader.py
AI_Agent/core/: get_llm.py  prompt.py  state.py
AI_Agent/md/: 000. Agent_pattern.md
AI_Agent/notebooks/: 0001.langchain.ipynb  0002.RAG.ipynb  0002.preprocessing.ipynb  0003.RAG.ipynb  0004.advanced_RAG.ipynb  0005.agent_RAG.ipynb
Fine-tuning/: README.md
